www/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: laznp-www-middleware
  namespace: wordpress
spec:
  rateLimit:
    average: 100
    burst: 50
