www/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: laznp-www
  name: laznp-www
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laznp-www
  template:
    metadata:
      labels:
        app: laznp-www
    spec:
      containers:
      - image: wordpress
        name: wordpress
        volumeMounts:
        - mountPath: /var/www/html
          name: laznp-www-data
      volumes:
      - name: laznp-www-data
        hostPath:
          path: /app/laznp.id/www
          type: DirectoryOrCreate
