www/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: laznp-www-svc
  name: laznp-www-svc
  namespace: wordpress
spec:
  ports:
  - name: laznp-www-port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: laznp-www
  type: ClusterIP
