www/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: laznp-www-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - 'laznp.id'
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - 'laznp.id'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: laznp-id-tls
      mode: SIMPLE
